<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.example.billassistant.AddBillData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/string_store_name_colon"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_text_store_name"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_store_name"
                android:inputType="textCapWords"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/string_bill_amount_colon"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/edit_text_bill_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_bill_amount"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="center_vertical"
                android:text="@string/string_bill_date_colon"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <DatePicker
                android:id="@+id/date_picker_bill_date"
                android:layout_marginTop="-32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.9"
                android:scaleY="0.9" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_layout_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginRight="@dimen/fab_margin"
                android:text="@string/string_payment_date_colon"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <DatePicker
                android:id="@+id/date_picker_payment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:scaleX="0.9"
                android:scaleY="0.9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/string_payment_status_colon"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group_payment_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_payment_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onPaymentPaid"
                    android:text="@string/string_paid" />

                <RadioButton
                    android:id="@+id/radio_button_payment_unpaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:onClick="onPaymentUnpaid"
                    android:text="@string/string_unpaid" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
