<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.example.billassistant.BillInfoActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/fab_margin"
        android:background="@android:drawable/dialog_holo_light_frame">


        <TextView
            android:id="@+id/text_view_bill_data_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rectangular_border_background"
            android:gravity="center"
            android:padding="@dimen/fab_margin"
            android:text="@string/string_store_name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_payment_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_bill_data_store_name"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="6dp"
            android:text="Payment Details"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/text_payment_details"
            android:background="@android:color/holo_blue_light" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_bill_data_store_name"
            android:layout_marginBottom="70dp"
            android:layout_marginTop="64dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="2"
                    android:text="@string/string_bill_amount"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_bill_data_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="3"
                    android:text=": Rs. 12000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="2"
                    android:text="Bill Date"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_bill_data_bill_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="3"
                    android:text=": 10/08/1999"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="2"
                    android:text="Pay Date"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_bill_data_payment_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="3"
                    android:text=": 11/08/1999"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="2"
                    android:text="@string/string_bill_id"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_bill_data_bill_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="3"
                    android:text=": luniaprovision12"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="2"
                    android:text="Payment Status"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_view_bill_data_payment_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_weight="3"
                    android:text=": Unpaid"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_bill_data_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:onClick="performDeleteOperation"
            android:text="@string/action_delete"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout_bill_data_payment_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_bill_data_delete">

            <Button
                android:id="@+id/button_bill_data_partially_paid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:background="@drawable/background_bills_left"
                android:text="@string/string_partially_paid"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_bill_data_marks_as_paid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:layout_weight="1"
                android:background="@drawable/background_bill_price"
                android:text="@string/string_mark_paid"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative_layout_partial_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_bill_data_delete"
            android:visibility="gone">

            <EditText
                android:id="@+id/edit_text_partial_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="120dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:hint="Amount"
                android:inputType="number" />

            <Button
                android:id="@+id/button_partial_amount"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                android:background="@drawable/background_bills_left"
                android:text="SAVE"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/linear_layout_bill_data_payment_options"
            android:background="@android:color/holo_blue_light" />
    </RelativeLayout>
</LinearLayout>
